# LumaWave

./: .clang-format  .gitignore  CMakeLists.txt  ReadMe.md
.github/: copilot-instructions.md
.github/skills/backlog-task-authoring/: SKILL.md
.github/skills/cpp-authoring/: SKILL.md
.github/skills/design-plan-authoring/: SKILL.md
.github/skills/document-cross-referencing/: SKILL.md
.github/skills/usage-doc-authoring/: SKILL.md
docs/: README.md  comparison-lumawave-vs-fastled.md  comparison-lumawave-vs-lumawave.md  comparison-lumawave-vs-neopixelbus.md
docs/backlog/plan/: bus-builder-lifetime-simplification.md  platform-transport-abstraction.md
docs/backlog/task-lists/: 001-bus-builder-backlog.md  001-cmake-native-build-system-backlog.md  001-color-to-pixel-rename-backlog.md  001-pixelview-dual-mode-access-redesign.md  001-platform-library-split-backlog.md  002-color-simplification-backlog.md  002-cpp23-modernization-backlog.md  002-global-brightness-through-bus-transport-and-drivers.md  003-eliminate-shader-concept-backlog.md  004-eliminate-pixelview-backlog.md  005-eliminate-color-templates-backlog.md  006-unify-bus-interface-backlog.md  007-combined-bus-unification-backlog.md  008-external-lifetime-management-backlog.md  011-runtime-settings-shader-reintroduction-backlog.md  013-replace-color-class-with-packed-integer.md
docs/internal/: platform-transport-inventory.md  wled-lumawave-compatibility.md  wled-mm-pixel-data-analysis.md
docs/internal/backlog/: arduino-examples-authoring-todo.md  color-math-refactors.md  lumawave-unsupported-chips.md  todo.md
docs/internal/information/: arduino-optional-plan.md  cpp23-modules-rearchitecture-design.md  notes.md  object-model-contracts.md  (+4 more)
docs/usage/: bus-builder.md  compilation-flags.md  palette-parsing.md
examples/: README.md
examples/external-pixels/: external-pixels.ino
examples/presets/: presets.ino
examples/shader-chaining/: shader-chaining.ino
examples/stack-allocation/: stack-allocation.ino
include/: .gitkeep
platformio/cfg/: esp32.ini  esp8266.ini  rp-pico.ini
src/: LumaWave.h
src/buses/: AggregateBus.h  Bus.h  BusBuilder.h  BusStorage.h  Busses.h  CompositeBus.h  IOutputPipeline.h  LightBus.h  PixelBus.h  ProtocolTransportPipeline.h  ReferenceBus.h  ReferenceLightBus.h  StackBusStorage.h  StackPixelBus.h
src/colors/: AggregateShader.h  AutoWhiteBalanceShader.h  ChannelMap.h  ChannelOrder.h  ChannelSource.h  Color.h  ColorChannelIndexIterator.h  ColorIterator.h  ColorMath.h  ColorMathBackend.h  Colors.h  IShader.h  KelvinToRgbStrategies.h
src/core/: Color.h  Compat.h  Core.h  Fill.h  IOutputPipeline.h  IPixelBus.h  IndexIterator.h  IndexRange.h  KelvinToRgbStrategies.h  OutputPipeline.h  Pixel.h  PixelView.h  RuntimeConfig.h  Topology.h  TypeConstraints.h  Writable.h
src/palettes/: BlendModes.h  BlendOperations.h  Blends.h  ColorMath.h  Detail.h  Generators.h  ModeEnums.h  NearestPolicies.h  Palette.h  PaletteDomain.h  Palettes.h  Sampling.h  SamplingTransition.h  Traits.h  Types.h  WrapModes.h
src/protocols/: BrightnessShader.h  ChannelOrder.h  DebugProtocol.h  DotStarProtocol.h  GammaShader.h  IProtocol.h  IShader.h  Lpd6803Protocol.h  Lpd8806Protocol.h  NilProtocol.h  OneWireEncoding.h  OneWireTiming.h  P9813Protocol.h  PixieProtocol.h  Protocol.h  ProtocolAliases.h  ProtocolDecoratorBase.h  ProtocolPresets.h  Protocols.h  ShaderProtocol.h  Sm16716Protocol.h  Sm168xProtocol.h  Tlc59711Protocol.h  Tm1814Protocol.h  Tm1914Protocol.h  Ws2801Protocol.h  Ws2812xPreset.h  Ws2812xProtocol.h
src/shaders/: BrightnessShader.h  GammaShader.h  IShader.h  KelvinToRgbStrategies.h  ShaderProtocol.h  Shaders.h
src/transports/: AnalogPwmLightDriver.h  ILightDriver.h  ITransport.h  NilLightDriver.h  NilOutputPipeline.h  NilTransport.h  NilTransportPreset.h  PrintLightDriver.h  PrintOutputPipeline.h  PrintTransport.h  PwmOutputPipeline.h  SpiTransport.h  Transport.h  TransportPresets.h  Transports.h
test/: CMakeLists.txt  README.md
test/busses/test_aggregate_bus/: test_main.cpp
test/busses/test_bus/: test_main.cpp
test/busses/test_bus_builder/: test_main.cpp
test/busses/test_composite_bus/: test_main.cpp
test/busses/test_light_bus/: test_main.cpp
test/busses/test_pixel_bus/: test_main.cpp
test/busses/test_pixel_bus_dynamic/: test_main.cpp
test/busses/test_reference_bus/: test_main.cpp
test/busses/test_reference_light_bus/: test_main.cpp
test/busses/test_static_bus_driver_pixel_bus/: test_main.cpp
test/contracts/test_default_palettes_opt_in_compile/: test_main.cpp
test/contracts/test_disable_template_combinatorial_types_compile/: test_main.cpp
test/contracts/test_factory_descriptor_first_pass_compile/: test_main.cpp
test/contracts/test_palette_first_pass_compile/: test_main.cpp
test/core/test_index_iterator/: test_main.cpp
test/core/test_pixel_view/: test_main.cpp
test/lights/test_print_light_driver/: test_main.cpp
test/protocols/: README.md
test/protocols/test_protocol_debug_pipeline/: test_main.cpp
test/protocols/test_protocol_spec_sections_1_1_to_1_4_and_1_14/: test_main.cpp
test/protocols/test_protocol_spec_sections_1_5_to_1_13/: test_main.cpp
test/shaders/: README.md
test/shaders/test_color_domain_section1/: test_main.cpp
test/shaders/test_color_manipulation_section6/: test_main.cpp
test/shaders/test_color_models_section5/: test_main.cpp
test/shaders/test_kelvin_to_rgb_integer_strategy/: test_main.cpp
test/shaders/test_kelvin_to_rgb_lut64_strategy/: test_main.cpp
test/shaders/test_palette_generators_section7/: test_main.cpp
test/shaders/test_palette_helpers_section7/: test_main.cpp
test/shaders/test_palette_modes_section7/: test_main.cpp
test/shaders/test_palette_sampling_overloads_section7/: test_main.cpp
test/shaders/test_palette_utilities_section7/: test_main.cpp
test/support/: FakeArduinoSetup.cpp  FakeArduinoSetup.h  TestHelpers.h  msvc_compat.h
test/test_phase1_smoke/: test_main.cpp
test/topologies/test_topology_spec_section2/: test_main.cpp
tools/: analyze_hsl_hsb_precision.py  analyze_kelvin_integer_strategy.py
(+54 files in other folders)
